# termweb-browser

./: .gitignore  AGENTS.md  AUTOMATION.md  Makefile  README.md  install.sh  package-lock.json  package.json
.github/workflows/: release.yml
.skills/bcli-web-agent/: AI-TERMINAL-AGENTS.md  SKILL.md  skill.json  skill.md
client/: coord-translator.js  display.js  index.js  input.js
client-rs/: Cargo.toml
client-rs/src/: display.rs  input.rs  main.rs  protocol.rs
config/: default.js
scripts/: build-release.sh  download-chrome.js  install-skill.sh  install.sh  termweb-launcher.sh
server/: ai-api.js  anti-fingerprint.js  browser.js  human-emulation.js  index.js  proxy.js
shared/: protocol.js
